--- a/cas/index.html
+++ b/cas/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="http://gmpg.org/xfn/11">
-<title>CAS &#8211; Clifford Alumni</title>
+<title>About CAS &#8211; Clifford Alumni</title>
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel='dns-prefetch' href='//s.w.org' />
 <link rel="alternate" type="application/rss+xml" title="Clifford Alumni &raquo; Feed" href="https://test.cliffordalumni.com/feed/" />
@@ -408,7 +408,7 @@ img.emoji {
 					<div class="row text-center">
 						<div class="col-md-12">
 							<div class="section-title page-title"> 
-								<h1 class="main-title">CAS</h1>                                                          
+								<h1 class="main-title">About CAS</h1>                                                          
 			                </div>						
 						</div>
 					</div>
@@ -449,7 +449,7 @@ img.emoji {
                                             <div class="footer-widgets-wrapper">
                                                                             <div class="col-md-3">
                                                 <div id="archives-4" class="section widget_archive"><h4 class="widget-title">Archives</h4>		<ul>
-			<li><a href='https://test.cliffordalumni.com/2018/08/'>August 2018</a></li>
+			<li><a href='https://test.cliffordalumni.com/2018/11/'>November 2018</a></li>
 		</ul>
 		</div>                    
                                             </div>
